[package]
name = "blockchain-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.4"
sha2 = "0.10.3"
hex = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
bincode = "1.3.3"
sled = "0.34.7"
ring = "0.16.20"
ripemd = "0.1.3"
bs58 = "0.4.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
once_cell = "1.19.0"
